Refactor bunch of logic and add authorization guard in products controller
refactor:
- store method in notifications controller
- all, destroy, store, update, and view
- transactions folder naming

fix:
- forgot to register products controller in api routes
