# backend/routes/api.js
@@ -10,7 +10,8 @@ var nfHandler = require(path.join(rootController, '/nf'));
 var userCRUD = require(path.join(rootController, 'users'));
 var notificationCRUD = require(path.join(rootController, 'notifications'));
 var categoryCRUD = require(path.join(rootController, 'categories'));
-var transactionCRUD = require(path.join(rootController, 'transaksi'));
+var transactionCRUD = require(path.join(rootController, 'transactions'));
+var productCRUD = require(path.join(rootController, 'products'));
 
 var auth = require(path.join(rootController, 'auth'));
 
@@ -44,6 +45,13 @@ router.post('/transaction', transactionCRUD.store);
 router.put('/transaction/:id', transactionCRUD.update);
 router.patch('/transaction/:id', transactionCRUD.update);
 router.delete('/transaction/:id', transactionCRUD.destroy);
+
+router.get('/products', productCRUD.all);
+router.get('/products/:id', productCRUD.view);
+router.post('/products', productCRUD.store);
+router.put('/products/:id', productCRUD.update);
+router.patch('/products/:id', productCRUD.update);
+router.delete('/products/:id', productCRUD.destroy);
 
 // catch 404 and respond json
 router.all('/*', nfHandler);
